# ocr_pipeline

./: .gitignore  Makefile  pyproject.toml
notebooks/: test.ipynb
ocr_pipeline/app/: daemon.py
ocr_pipeline/app/api/: v1.py
ocr_pipeline/app/config/: config.py  config.yaml  models.py  service.py  utils.py
ocr_pipeline/app/models/: models.py
ocr_pipeline/app/routers/: routers.py
ocr_pipeline/app/service/: ocr_service.py
ocr_pipeline/log/: __init__.py
ocr_pipeline/ocr/: ocr.py
